<resources>
    <string name="app_name">PeopleAds</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="peopleads">PeopleAds</string>
    <string name="log_in">Log In</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_password">Your password?</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="good_morning">Good Morning,</string>
    <string name="candra_ibra_sanie">Candra Ibra Sanie</string>
    <string name="rp">RP</string>
    <string name="_100_000">100.000</string>
    <string name="rewards">Rewards</string>
    <string name="ongoing">Ongoing</string>
    <string name="_00_12_59">00.12.59</string>
    <string name="please_login_for_continue">Please login for continue</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="please_enter_your_mobile_phone">Please enter your mobile phone</string>
    <string name="your_province">Your Province</string>
    <string name="please_enter_your_city">Please enter your city</string>
    <string name="please_enter_your_postal_code">Please enter your postal code</string>
    <string name="continue_string">Continue</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="lorem_ipsum">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.</string>
    <string name="i_agree_with_terms_and_conditions">I Agree with terms and conditions</string>
    <string name="terms_and_use">Terms And Use</string>
    <string name="terms_and_conditions2">Terms And Conditions</string>
    <string name="please_enter_your_id_number">Please enter your ID number</string>
    <string name="check_your_email">Check your email</string>
    <string name="available">Available</string>
    <string name="transfer">Transfer</string>
    <string name="please_scan_your_id_card">Please scan your ID card</string>
    <string name="home">Home</string>
    <string name="chart">Chart</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="i_agree_with">I Agree with</string>
    <string name="mayora_tshirt">Mayora Tshirt</string>
    <string name="requirements">Requirements</string>
    <string name="date">Date</string>
    <string name="notifications">Notifications</string>
    <string name="update_profile">Update Profile</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="candoan_yahhuu_com">candoan@yahhuu.com</string>
    <string name="number_phone">Number Phone</string>
    <string name="_082222299992">082222299992</string>
    <string name="klapagading_tanah_abang_jakarta_pusat">Klapagading Tanah Abang Jakarta Pusat</string>
    <string name="address">Address</string>
    <string name="bca">BCA</string>
    <string name="bank">Bank</string>
    <string name="_93517538193">93517538193</string>
    <string name="bank_number">Bank Number</string>
    <string name="personal_info">Personal Info</string>
    <string name="payment_information">Payment Information</string>
    <string name="fee">Fee</string>
    <string name="start_date">Start Date</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to</string>
    <string name="update">Update</string>
    <string name="from">From</string>
    <string name="nominal">Nominal</string>

</resources>
