<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/bgprimary"
            app:layout_constraintDimensionRatio="H,16:10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/bgtransparent"
            app:layout_constraintDimensionRatio="H,29:21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/avenir_demi"
            android:text="@string/account"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardInfo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logoDoKu"
                    android:layout_width="74dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_doku"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="14dp"
                    android:background="@color/colorFontSub"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoDoKu" />

                <TextView
                    android:id="@+id/rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/avenir_medium"
                    android:text="@string/rp"
                    android:textColor="@color/colorFontSub"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/total"
                    app:layout_constraintEnd_toStartOf="@id/total"
                    app:layout_constraintTop_toTopOf="@+id/total" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/avenir_demi"
                    android:text="@string/_100_000"
                    android:textColor="@color/colorFontBlack"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/separator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgTransfer"
                    android:layout_width="44dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="13dp"
                    android:src="@drawable/pay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/separator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_demi"
                    android:text="@string/transfer"
                    android:textColor="@color/colorFontSub"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/imgTransfer"
                    app:layout_constraintStart_toStartOf="@id/imgTransfer"
                    app:layout_constraintTop_toBottomOf="@id/imgTransfer" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_top"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/cardInfo">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_gradient"
                android:fontFamily="@font/avenir_demi"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/update_profile"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/personal_info"
                android:textColor="@color/colorFontBlack"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnUpdate" />

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorFontSub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInfo" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/name"
                android:textColor="@color/colorFontBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInfo" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_round"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="28dp"
                android:paddingTop="5dp"
                android:paddingEnd="28dp"
                android:paddingBottom="5dp"
                android:text="@string/candra_ibra_sanie"
                android:textColor="@color/colorFontSub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textName" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/email"
                android:textColor="@color/colorFontBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtName" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_round"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="28dp"
                android:paddingTop="5dp"
                android:paddingEnd="28dp"
                android:paddingBottom="5dp"
                android:text="@string/candoan_yahhuu_com"
                android:textColor="@color/colorFontSub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEmail" />

            <TextView
                android:id="@+id/textMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/number_phone"
                android:textColor="@color/colorFontBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtEmail" />

            <TextView
                android:id="@+id/txtMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_round"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="28dp"
                android:paddingTop="5dp"
                android:paddingEnd="28dp"
                android:paddingBottom="5dp"
                android:text="@string/_082222299992"
                android:textColor="@color/colorFontSub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textMobile" />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/address"
                android:textColor="@color/colorFontBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMobile" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_round"
                android:fontFamily="@font/avenir_medium"
                android:maxEms="10"
                android:paddingStart="28dp"
                android:paddingTop="5dp"
                android:paddingEnd="28dp"
                android:paddingBottom="5dp"
                android:text="@string/klapagading_tanah_abang_jakarta_pusat"
                android:textColor="@color/colorFontSub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAddress" />

            <TextView
                android:id="@+id/textInfoPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/payment_information"
                android:textColor="@color/colorFontBlack"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAddress" />

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorFontSub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInfoPayment" />

            <TextView
                android:id="@+id/textBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/bank"
                android:textColor="@color/colorFontBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator2" />

            <TextView
                android:id="@+id/txtBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_round"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="28dp"
                android:paddingTop="5dp"
                android:paddingEnd="28dp"
                android:paddingBottom="5dp"
                android:text="@string/bca"
                android:textColor="@color/colorFontSub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textBank" />

            <TextView
                android:id="@+id/textBankNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/bank_number"
                android:textColor="@color/colorFontBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBank" />

            <TextView
                android:id="@+id/txtBankNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_round"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="28dp"
                android:paddingTop="5dp"
                android:paddingEnd="28dp"
                android:paddingBottom="5dp"
                android:text="@string/_93517538193"
                android:textColor="@color/colorFontSub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textBankNo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/personoi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>